update source code doc

--- a/simulations/vec/VEComnetpp.ini
+++ b/simulations/vec/VEComnetpp.ini
@@ -109,7 +109,7 @@ sim-time-limit = 900s
 
 # Application Setup 
 *.ue[*].numApps = 1 # 1, 2
-*.ue[*].app[*].schedulerAddr = "scheduler" # obtain the address of the client by reading its index in the array of Apps 
+*.ue[*].app[*].schedulerAddr = "schedulerHost" # obtain the address of the client by reading its index in the array of Apps 
 *.ue[*].app[*].schedulerPort = 1000  
 *.ue[*].app[*].localPort = 4000 + ancestorIndex(1) * 10 + index	# assume each ue contains no more than 10 apps
 *.ue[*].udp.mtu = 409600B	# 400KB, the max transimit unit size, for accelerating simulation
@@ -119,7 +119,7 @@ sim-time-limit = 900s
 
 # gNodeB position 
 *.gnb[*].server.localPort = 2000 + ancestorIndex(1)
-*.gnb[*].server.schedulerAddr = "scheduler"
+*.gnb[*].server.schedulerAddr = "schedulerHost"
 *.gnb[*].server.schedulerPort = 1000
 *.gnb[*].server.cmpUnitTotal = 20
 *.gnb[*].udp.mtu = 409600B	# 400KB, for accelerating simulation 
