update readme file

--- a/simulations/vec/VEComnetpp.ini
+++ b/simulations/vec/VEComnetpp.ini
@@ -1,6 +1,6 @@
 [General]
 output-scalar-file-append = false 
- 
+
 # Network configuration 
 network = mecRT.simulations.vec.VEC
 sim-time-limit = 900s 
@@ -77,7 +77,7 @@ seed-set = 12345	# set a fixed seed for repeating experiments
 
 [Config Uploading]
 # base configuration: appCount=1, interval=10, rsAll=true, ratio=1
-*.enableInitDebug = true
+*.enableInitDebug = false
 
 sim-time-limit = 900s
 **.rescheduleAll = true
