--- a/simulations/vec/VEComnetpp.ini
+++ b/simulations/vec/VEComnetpp.ini
@@ -81,8 +81,8 @@ seed-set = 12345	# set a fixed seed for repeating experiments
 
 sim-time-limit = 900s
 **.rescheduleAll = true
-*.numUe = 2 	# 80
-*.numGnb = 1 	# 15
+*.numUe = 5 	# 80
+*.numGnb = 3 	# 15
 **.srsDistanceCheck = true  # disable the checking the distance for SRS transmission, for testing purpose
 **.enableBackhaul = false	# whether to enable the backhaul, default is false
 **.fairFactor = 1    # the fairness factor for the scheduler, i.e., 0.4
@@ -92,12 +92,12 @@ sim-time-limit = 900s
 # Greedy, FastLR, GameTheory, Iterative, SARound for VEC without backhaul network
 # FwdGreedy, FwdGameTheory, FwdQuickLR, FwdGraphMatch for VEC with backhaul network
 **.scheduleInterval = 10s	# 5, 10, 15, 20
-**.scheduleScheme = "Iterative"
+**.scheduleScheme = "Greedy"
 **.offloadOverhead = 0.001s
 **.countExeTime = true	# whether to count the execution time of schedule scheme, default is true
-**.vecScheduler.localPort = 1000
-# **.vecScheduler.srvTimeScale_ = 1.0
-# **.vecScheduler.cuStep = 2
+**.scheduler.localPort = 1000
+# **.scheduler.srvTimeScale_ = 1.0
+# **.scheduler.cuStep = 2
 
 # UE configuration 
 
@@ -161,7 +161,7 @@ extends = Uploading
 
 *.carrierAggregation.componentCarrier[0].numBands = 27
 **.numRbPerBand = 10
-*.gnb[*].rsuServer.cmpUnitTotal = 30
+*.gnb[*].server.cmpUnitTotal = 30
 
 **.enableBackhaul = true	# whether to enable the backhaul, default is false
 sim-time-limit = 900s
@@ -187,7 +187,7 @@ extends = Uploading
 
 *.carrierAggregation.componentCarrier[0].numBands = 27
 **.numRbPerBand = 10
-*.gnb[*].rsuServer.cmpUnitTotal = 30
+*.gnb[*].server.cmpUnitTotal = 30
 
 **.enableBackhaul = true	# whether to enable the backhaul, default is false
 sim-time-limit = 900s
@@ -197,8 +197,8 @@ sim-time-limit = 900s
 *.ue[*].app[*].dlScale = 1    # the scale for the deadline of the app, default is 1.0. dl = dl / dlScale
 
 **.fairFactor = ${fairnessFactor=0.5}    # the fairness factor for the scheduler, 1/2
-**.vecScheduler.cuStep = 2
-**.vecScheduler.rbStep = 2
+**.scheduler.cuStep = 2
+**.scheduler.rbStep = 2
 *.ue[*].numApps = ${appCount=4}
 **.scheduleScheme = "${scheme=FwdGreedy, FwdGameTheory, FwdQuickLR, FwdGraphMatch}"	# FwdGreedy, FwdGameTheory, FwdQuickLR, FwdGraphMatch
 **.scheduleInterval = ${interval=10}s	# ${interval=5, 10, 15, 20}s
@@ -243,7 +243,7 @@ extends = Uploading
 
 *.carrierAggregation.componentCarrier[0].numBands = 27
 **.numRbPerBand = 10
-*.gnb[*].rsuServer.cmpUnitTotal = 30
+*.gnb[*].server.cmpUnitTotal = 30
 
 **.enableBackhaul = true	# whether to enable the backhaul, default is false
 sim-time-limit = 900s
