--- a/simulations/decentralized/omnetpp.ini
+++ b/simulations/decentralized/omnetpp.ini
@@ -2,7 +2,7 @@
 output-scalar-file-append = false 
 
 # Network configuration 
-network = mecRT.simulations.vec.VEC
+network = mecRT.simulations.decentralized.DeMEC
 sim-time-limit = 900s 
 warmup-period = 0s 
 #seed-set = ${repetition} 
@@ -72,6 +72,7 @@ seed-set = 12345	# set a fixed seed for repeating experiments
 *.database.rsuExeDataPath = "./profile/server_data.txt"
 *.database.rsuPosDataPath = "./traffic/RSU15_xy.txt"
 *.database.rsuGraphPath = "./traffic/RSU15_graph.txt"  # the path to store the RSU graph data
+*.topologyGen.topologyFile = "./traffic/RSU15_graph.txt"  # the path to store the RSU graph data
 
 # --------------------------------------------------------# 
 
@@ -82,7 +83,7 @@ seed-set = 12345	# set a fixed seed for repeating experiments
 sim-time-limit = 900s
 **.rescheduleAll = true
 *.numUe = 5 	# 80
-*.numGnb = 3 	# 15
+*.numGnb = 15 	# 15
 **.srsDistanceCheck = true  # disable the checking the distance for SRS transmission, for testing purpose
 **.enableBackhaul = true	# whether to enable the backhaul, default is false
 **.fairFactor = 1    # the fairness factor for the scheduler, i.e., 0.4
