--- a/simulations/decentralized/omnetpp.ini
+++ b/simulations/decentralized/omnetpp.ini
@@ -22,7 +22,10 @@ seed-set = 12345	# set a fixed seed for repeating experiments
 **.amcType = "NRAmc" 
 **.targetBler = 0.01 
 **.blerShift = 5   
-*.configurator.config = xmldoc("./demo.xml") 
+*.configurator.config = xmldoc("./demo.xml")
+# *.configurator.config = xmldoc("./ipConfig.xml")
+# *.configurator.addStaticRoutes = false
+# *.configurator.addDefaultRoutes = false
  
 # Floorplan definition 
 **.mobility.constraintAreaMaxX = 1500m 
@@ -78,12 +81,12 @@ seed-set = 12345	# set a fixed seed for repeating experiments
 
 [Config Uploading]
 # base configuration: appCount=1, interval=10, rsAll=true, ratio=1
-*.enableInitDebug = false
+*.enableInitDebug = true
 
 sim-time-limit = 900s
 **.rescheduleAll = true
 *.numUe = 5 	# 80
-*.numGnb = 15 	# 15
+# *.numGnb = 15 	# 15
 **.srsDistanceCheck = true  # disable the checking the distance for SRS transmission, for testing purpose
 **.enableBackhaul = true	# whether to enable the backhaul, default is false
 **.fairFactor = 1    # the fairness factor for the scheduler, i.e., 0.4
