adjust data transmission logic

--- a/simulations/decentralized/omnetpp.ini
+++ b/simulations/decentralized/omnetpp.ini
@@ -81,7 +81,7 @@ seed-set = 12345	# set a fixed seed for repeating experiments
 
 [Config Uploading]
 # base configuration: appCount=1, interval=10, rsAll=true, ratio=1
-*.enableInitDebug = true
+*.enableInitDebug = false
 
 sim-time-limit = 900s
 **.rescheduleAll = true
@@ -103,8 +103,7 @@ sim-time-limit = 900s
 # **.scheduler.srvTimeScale_ = 1.0
 # **.scheduler.cuStep = 2
 
-# UE configuration 
-
+############### UE Configuration #################
 # connect the UE's NIC (NR side) to the corresponding serving gNB 
 *.ue[*].macCellId = 0 
 *.ue[*].masterId = 0 
@@ -119,8 +118,7 @@ sim-time-limit = 900s
 *.ue[*].udp.mtu = 409600B	# 400KB, the max transimit unit size, for accelerating simulation
 *.ue[*].app[*].dlScale = 1.5    # the scale for the deadline of the app, default is 1.0. dl = dl / dlScale
 
-# GNB configuration 
-
+############### GNB Configuration #################
 # gNodeB position 
 *.gnb[*].server.localPort = 2000 + ancestorIndex(1)
 *.gnb[*].server.schedulerAddr = "schedulerHost"
@@ -128,6 +126,9 @@ sim-time-limit = 900s
 *.gnb[*].server.cmpUnitTotal = 20
 *.gnb[*].udp.mtu = 409600B	# 400KB, for accelerating simulation 
 **.pilotMode = "MEDIAN_CQI"	# "MAX_CQI", "MIN_CQI", "MEDIAN_CQI", "ROBUST_CQI"
+
+############### Router Configuration #################
+*.upf.ospf.ospfConfig = xmldoc("ospfConfig.xml")
 
 # Statistics 
 #output-scalar-file = ${resultdir}/${configname}/${scheme}-appCount-1-interval-10-rsAll-true-ratio-1.sca
