add  a customized OSPF routing module

--- a/simulations/decentralized/omnetpp.ini
+++ b/simulations/decentralized/omnetpp.ini
@@ -77,6 +77,15 @@ seed-set = 12345	# set a fixed seed for repeating experiments
 *.database.rsuGraphPath = "./traffic/RSU15_graph.txt"  # the path to store the RSU graph data
 *.topologyGen.topologyFile = "./traffic/RSU15_graph.txt"  # the path to store the RSU graph data
 
+############### Configure Routing Table #################
+**.configurator.addStaticRoutes = false
+**.configurator.addDefaultRoutes = false
+**.configurator.addSubnetRoutes = false
+**.configurator.addDirectRoutes = false
+**.configurator.dumpTopology = false
+**.ipv4.routingTable.netmaskRoutes = ""
+
+
 # --------------------------------------------------------# 
 
 [Config Uploading]
