--- a/.gitignore
+++ b/.gitignore
@@ -4,5 +4,5 @@ src/out/
 src/libmecrt_dbg.so
 src/libmecrt.so
 simulations/vec/results/
-# simulations/decentralized/results/
+simulations/decentralized/results/
 out/
