neighbor discovery is done

--- a/src/Makefile
+++ b/src/Makefile
@@ -74,7 +74,8 @@ OBJS = \
     $O/mecrt/packets/apps/RsuFeedback_m.o \
     $O/mecrt/packets/apps/ServiceStatus_m.o \
     $O/mecrt/packets/apps/VecPacket_m.o \
-    $O/mecrt/packets/nic/VecDataInfo_m.o
+    $O/mecrt/packets/nic/VecDataInfo_m.o \
+    $O/mecrt/packets/routing/OspfHello_m.o
 
 # Message files
 MSGFILES = \
@@ -83,7 +84,8 @@ MSGFILES = \
     mecrt/packets/apps/RsuFeedback.msg \
     mecrt/packets/apps/ServiceStatus.msg \
     mecrt/packets/apps/VecPacket.msg \
-    mecrt/packets/nic/VecDataInfo.msg
+    mecrt/packets/nic/VecDataInfo.msg \
+    mecrt/packets/routing/OspfHello.msg
 
 # SM files
 SMFILES =
