debug the new protocol mecodpf

--- a/simulations/decentralized/omnetpp.ini
+++ b/simulations/decentralized/omnetpp.ini
@@ -90,9 +90,9 @@ seed-set = 12345	# set a fixed seed for repeating experiments
 
 [Config Uploading]
 # base configuration: appCount=1, interval=10, rsAll=true, ratio=1
-*.enableInitDebug = false
+*.enableInitDebug = true
 
-sim-time-limit = 900s
+sim-time-limit = 1s
 **.rescheduleAll = true
 *.numUe = 5 	# 80
 # *.numGnb = 15 	# 15
