--- a/simulations/decentralized/omnetpp.ini
+++ b/simulations/decentralized/omnetpp.ini
@@ -118,6 +118,7 @@ sim-time-limit = 3s
 *.ue[*].masterId = 0 
 *.ue[*].nrMacCellId = 1 
 *.ue[*].nrMasterId = 1 
+*.ue[*].ipv4.configurator.config = xmldoc("./demo.xml")
 
 # Application Setup 
 *.ue[*].numApps = 1 # 1, 2
