update ue service request logic

--- a/simulations/decentralized/omnetpp.ini
+++ b/simulations/decentralized/omnetpp.ini
@@ -108,7 +108,6 @@ sim-time-limit = 3s
 **.scheduleScheme = "FwdGreedy"
 **.offloadOverhead = 0.001s
 **.countExeTime = true	# whether to count the execution time of schedule scheme, default is true
-**.scheduler.localPort = 1000
 # **.scheduler.srvTimeScale_ = 1.0
 # **.scheduler.cuStep = 2
 
@@ -122,20 +121,23 @@ sim-time-limit = 3s
 
 # Application Setup 
 *.ue[*].numApps = 1 # 1, 2
-*.ue[*].app[*].schedulerAddr = "schedulerHost" # obtain the address of the client by reading its index in the array of Apps 
-*.ue[*].app[*].schedulerPort = 1000  
+# *.ue[*].app[*].schedulerAddr = "schedulerHost" # obtain the address of the client by reading its index in the array of Apps 
+# *.ue[*].app[*].schedulerPort = 1000  
 *.ue[*].app[*].localPort = 4000 + ancestorIndex(1) * 10 + index	# assume each ue contains no more than 10 apps
 *.ue[*].udp.mtu = 409600B	# 400KB, the max transimit unit size, for accelerating simulation
 *.ue[*].app[*].dlScale = 1.5    # the scale for the deadline of the app, default is 1.0. dl = dl / dlScale
 
 ############### GNB Configuration #################
 # gNodeB position 
-*.gnb[*].server.localPort = 2001 + ancestorIndex(1)
-*.gnb[*].server.schedulerAddr = "schedulerHost"
-*.gnb[*].server.schedulerPort = 1000
+*.gnb[*].server.localPort = 2000 + ancestorIndex(1) * 2
+*.gnb[*].scheduler.localPort = 2000 + ancestorIndex(1) * 2 + 1
+# *.gnb[*].server.schedulerAddr = "schedulerHost"
+# *.gnb[*].server.schedulerPort = 1000
 *.gnb[*].server.cmpUnitTotal = 20
 *.gnb[*].udp.mtu = 409600B	# 400KB, for accelerating simulation 
 **.pilotMode = "MEDIAN_CQI"	# "MAX_CQI", "MIN_CQI", "MEDIAN_CQI", "ROBUST_CQI"
+
+*.schedulerHost.scheduler.localPort = 1000
 
 ############### Router Configuration #################
 *.upf.ospf.ospfConfig = xmldoc("ospfConfig.xml")
