debug the control logic

--- a/simulations/decentralized/omnetpp.ini
+++ b/simulations/decentralized/omnetpp.ini
@@ -70,8 +70,8 @@ seed-set = 12345	# set a fixed seed for repeating experiments
 *.database.vehExeDataPath = "./profile/jetson_data.txt"
 *.database.rsuExeDataPath = "./profile/server_data.txt"
 *.database.rsuPosDataPath = "./traffic/RSU15_xy.txt"
-*.database.rsuGraphPath = "./traffic/RSU15_graph.txt"  # the path to store the RSU graph data
-*.topologyGen.topologyFile = "./traffic/RSU15_graph.txt"  # the path to store the RSU graph data
+# *.database.rsuGraphPath = "./traffic/RSU15_graph.txt"  # the path to store the RSU graph data
+# *.topologyGen.topologyFile = "./traffic/RSU15_graph.txt"  # the path to store the RSU graph data
 
 ############### Configure Routing Table #################
 *.configurator.config = xmldoc("./demo.xml")
