add link failure injection

--- a/simulations/decentralized/omnetpp.ini
+++ b/simulations/decentralized/omnetpp.ini
@@ -139,6 +139,9 @@ sim-time-limit = 3s
 ############### Router Configuration #################
 *.upf.ospf.ospfConfig = xmldoc("ospfConfig.xml")
 
+############### Fault Configuration #################
+*.gnb[6].nodeInfo.ifFailTime = 20
+
 # Statistics 
 #output-scalar-file = ${resultdir}/${configname}/${scheme}-appCount-1-interval-10-rsAll-true-ratio-1.sca
 #output-vector-file = ${resultdir}/${configname}/${scheme}-appCount-1-interval-10-rsAll-true-ratio-1.vec
