node failure injection

--- a/simulations/decentralized/omnetpp.ini
+++ b/simulations/decentralized/omnetpp.ini
@@ -140,7 +140,10 @@ sim-time-limit = 3s
 *.upf.ospf.ospfConfig = xmldoc("ospfConfig.xml")
 
 ############### Fault Configuration #################
-*.gnb[6].nodeInfo.ifFailTime = 20
+# *.gnb[6].nodeInfo.ifFailTime = 72
+# *.gnb[6].nodeInfo.ifRecoverTime = 90
+*.gnb[6].nodeInfo.nodeFailTime = 17
+*.gnb[6].nodeInfo.nodeRecoverTime = 32
 
 # Statistics 
 #output-scalar-file = ${resultdir}/${configname}/${scheme}-appCount-1-interval-10-rsAll-true-ratio-1.sca
