node failure recovery tested

--- a/simulations/decentralized/omnetpp.ini
+++ b/simulations/decentralized/omnetpp.ini
@@ -104,7 +104,6 @@ sim-time-limit = 3s
 **.scheduleInterval = 10s	# 5, 10, 15, 20
 **.scheduleScheme = "FwdGreedy"
 **.offloadOverhead = 0.001s
-**.countExeTime = true	# whether to count the execution time of schedule scheme, default is true
 # **.scheduler.srvTimeScale_ = 1.0
 # **.scheduler.cuStep = 2
 
@@ -134,16 +133,13 @@ sim-time-limit = 3s
 *.gnb[*].udp.mtu = 409600B	# 400KB, for accelerating simulation 
 **.pilotMode = "MEDIAN_CQI"	# "MAX_CQI", "MIN_CQI", "MEDIAN_CQI", "ROBUST_CQI"
 
-*.schedulerHost.scheduler.localPort = 1000
-
-############### Router Configuration #################
-*.upf.ospf.ospfConfig = xmldoc("ospfConfig.xml")
+*.gnb[*].ospf.helloInterval = 0.2s
 
 ############### Fault Configuration #################
 # *.gnb[6].nodeInfo.ifFailTime = 72
 # *.gnb[6].nodeInfo.ifRecoverTime = 90
-*.gnb[6].nodeInfo.nodeFailTime = 17
-*.gnb[6].nodeInfo.nodeRecoverTime = 32
+*.gnb[6].nodeInfo.nodeFailTime = 72
+*.gnb[6].nodeInfo.nodeRecoverTime = 90
 
 # Statistics 
 #output-scalar-file = ${resultdir}/${configname}/${scheme}-appCount-1-interval-10-rsAll-true-ratio-1.sca
