add benchmark algorithms for accuracy

--- a/simulations/decentralized/omnetpp.ini
+++ b/simulations/decentralized/omnetpp.ini
@@ -67,11 +67,10 @@ seed-set = 12345	# set a fixed seed for repeating experiments
 #**.sctp.enableHeartbeats = false	
 
 ############### Read Profiling Data #################
-*.database.vehExeDataPath = "./profile/jetson_data.txt"
-*.database.rsuExeDataPath = "./profile/server_data.txt"
-*.database.rsuPosDataPath = "./traffic/RSU15_xy.txt"
-# *.database.rsuGraphPath = "./traffic/RSU15_graph.txt"  # the path to store the RSU graph data
-# *.topologyGen.topologyFile = "./traffic/RSU15_graph.txt"  # the path to store the RSU graph data
+*.database.ueExeDataPath = "./profile/jetson_classification.txt"
+*.database.gnbExeDataPath = "./profile/server_classification.txt"
+*.database.appDataSizePath = "./profile/imageNet_size.txt"
+*.database.gnbPosDataPath = "./traffic/RSU15_xy.txt"
 
 ############### Configure Routing Table #################
 *.configurator.config = xmldoc("./demo.xml")
@@ -89,7 +88,7 @@ seed-set = 12345	# set a fixed seed for repeating experiments
 # base configuration: appCount=1, interval=10, rsAll=true, ratio=1
 *.enableInitDebug = true
 
-sim-time-limit = 3s
+sim-time-limit = 100s
 **.rescheduleAll = true
 *.numUe = 5 	# 80
 # *.numGnb = 15 	# 15
@@ -121,7 +120,7 @@ sim-time-limit = 3s
 # *.ue[*].app[*].schedulerPort = 1000  
 *.ue[*].app[*].localPort = 4000 + ancestorIndex(1) * 10 + index	# assume each ue contains no more than 10 apps
 *.ue[*].udp.mtu = 409600B	# 400KB, the max transimit unit size, for accelerating simulation
-*.ue[*].app[*].dlScale = 1.5    # the scale for the deadline of the app, default is 1.0. dl = dl / dlScale
+*.ue[*].app[*].dlScale = 1    # the scale for the deadline of the app, default is 1.0. dl = dl / dlScale
 
 ############### GNB Configuration #################
 # gNodeB position 
@@ -133,13 +132,13 @@ sim-time-limit = 3s
 *.gnb[*].udp.mtu = 409600B	# 400KB, for accelerating simulation 
 **.pilotMode = "MEDIAN_CQI"	# "MAX_CQI", "MIN_CQI", "MEDIAN_CQI", "ROBUST_CQI"
 
-*.gnb[*].ospf.helloInterval = 0.2s
+*.gnb[*].ospf.helloInterval = 8s
 
 ############### Fault Configuration #################
 # *.gnb[6].nodeInfo.ifFailTime = 72
 # *.gnb[6].nodeInfo.ifRecoverTime = 90
-*.gnb[6].nodeInfo.nodeFailTime = 72
-*.gnb[6].nodeInfo.nodeRecoverTime = 90
+# *.gnb[6].nodeInfo.nodeFailTime = 72
+# *.gnb[6].nodeInfo.nodeRecoverTime = 90
 
 # Statistics 
 #output-scalar-file = ${resultdir}/${configname}/${scheme}-appCount-1-interval-10-rsAll-true-ratio-1.sca
