added algorithms for accuracy test

--- a/simulations/decentralized/omnetpp.ini
+++ b/simulations/decentralized/omnetpp.ini
@@ -93,7 +93,6 @@ sim-time-limit = 100s
 *.numUe = 5 	# 80
 # *.numGnb = 15 	# 15
 **.srsDistanceCheck = true  # disable the checking the distance for SRS transmission, for testing purpose
-**.enableBackhaul = true	# whether to enable the backhaul, default is false
 **.fairFactor = 1    # the fairness factor for the scheduler, i.e., 0.4
 **.countExeTime = true
 
@@ -101,7 +100,7 @@ sim-time-limit = 100s
 # Greedy, FastLR, GameTheory, Iterative, SARound for VEC without backhaul network
 # FwdGreedy, FwdGameTheory, FwdQuickLR, FwdGraphMatch for VEC with backhaul network
 **.scheduleInterval = 10s	# 5, 10, 15, 20
-**.scheduleScheme = "FwdGreedy"
+**.scheduleScheme = "Greedy"
 **.offloadOverhead = 0.001s
 # **.scheduler.srvTimeScale_ = 1.0
 # **.scheduler.cuStep = 2
