fault injection done

--- a/simulations/decentralized/omnetpp.ini
+++ b/simulations/decentralized/omnetpp.ini
@@ -66,11 +66,12 @@ seed-set = 12345	# set a fixed seed for repeating experiments
 #**.sctp.nagleEnabled = false 
 #**.sctp.enableHeartbeats = false	
 
-############### Read Profiling Data #################
+############### Read Profiling Data for Database #################
 *.database.ueExeDataPath = "./profile/jetson_classification.txt"
 *.database.gnbExeDataPath = "./profile/server_classification.txt"
 *.database.appDataSizePath = "./profile/imageNet_size.txt"
 *.database.gnbPosDataPath = "./traffic/RSU15_xy.txt"
+*.database.numLinks = 25
 
 ############### Configure Routing Table #################
 *.configurator.config = xmldoc("./demo.xml")
@@ -131,13 +132,14 @@ sim-time-limit = 100s
 *.gnb[*].udp.mtu = 409600B	# 400KB, for accelerating simulation 
 **.pilotMode = "MEDIAN_CQI"	# "MAX_CQI", "MIN_CQI", "MEDIAN_CQI", "ROBUST_CQI"
 
-*.gnb[*].ospf.helloInterval = 8s
+*.gnb[*].ospf.helloInterval = 1s
 
 ############### Fault Configuration #################
-# *.gnb[6].nodeInfo.ifFailTime = 72
-# *.gnb[6].nodeInfo.ifRecoverTime = 90
-# *.gnb[6].nodeInfo.nodeFailTime = 72
-# *.gnb[6].nodeInfo.nodeRecoverTime = 90
+# *.database.linkErrorInjection = true
+# *.database.linkErrorProb = 0.1
+*.database.serverErrorInjection = true
+*.database.serverErrorProb = 0.1
+*.database.failureRecoveryInterval = 30s
 
 # Statistics 
 #output-scalar-file = ${resultdir}/${configname}/${scheme}-appCount-1-interval-10-rsAll-true-ratio-1.sca
