update experiment configuration - normal

--- a/simulations/decentralized/omnetpp.ini
+++ b/simulations/decentralized/omnetpp.ini
@@ -5,17 +5,9 @@ output-scalar-file-append = false
 network = mecRT.simulations.decentralized.DeMEC
 sim-time-limit = 900s 
 warmup-period = 0s 
-#seed-set = ${repetition} 
 seed-set = 12345	# set a fixed seed for repeating experiments
 
-#cmdenv-express-mode = true
-# record-eventlog = true
-# record-eventlog-file = "eventlog_run0.elog"	# the event log file name, for debugging purpose
-#**.cmdenv-log-level = "DETAIL"
-
 # Statistics 
-#output-scalar-file = ${resultdir}/${configname}/${repetition}.sca 
-#output-vector-file = ${resultdir}/${configname}/${repetition}.vec 
 **.routingRecorder.enabled = false 
   
 # General parameters 
@@ -55,16 +47,12 @@ seed-set = 12345	# set a fixed seed for repeating experiments
 *.carrierAggregation.componentCarrier[0].numBands = 18
 *.carrierAggregation.componentCarrier[0].numerologyIndex = 0
 **.numRbPerBand = 15
-#*.bgCell[*].bgScheduler.numBands = 100
-#*.bgCell[*].bgScheduler.isNr = true
 *.bandManager.numerologyIndex = 0
 **.collectSinrStatistics = false
 
 ############### Handover #################
 #**.enableHandover = true
 **.dynamicCellAssociation = true  # at initialize the ue connects to the best cell (based on power)
-#**.sctp.nagleEnabled = false 
-#**.sctp.enableHeartbeats = false	
 
 ############### Read Profiling Data for Database #################
 *.database.ueExeDataPath = "./profile/jetson_classification.txt"
@@ -87,21 +75,20 @@ seed-set = 12345	# set a fixed seed for repeating experiments
 
 [Config Uploading]
 # base configuration: appCount=1, interval=10, rsAll=true, ratio=1
-*.enableInitDebug = true
+*.enableInitDebug = false
 
 sim-time-limit = 100s
 **.rescheduleAll = true
-*.numUe = 5 	# 80
-# *.numGnb = 15 	# 15
+*.numUe = 80 	# 80
 **.srsDistanceCheck = true  # disable the checking the distance for SRS transmission, for testing purpose
-**.fairFactor = 1    # the fairness factor for the scheduler, i.e., 0.4
 **.countExeTime = true
 
 ############### Scheduler Configuration #################
 # Greedy, FastLR, GameTheory, Iterative, SARound for VEC without backhaul network
 # FwdGreedy, FwdGameTheory, FwdQuickLR, FwdGraphMatch for VEC with backhaul network
 **.scheduleInterval = 10s	# 5, 10, 15, 20
-**.scheduleScheme = "Greedy"
+**.scheduleScheme = "GraphMatch"    # "Greedy", "FastSA", "GameTheory", "GraphMatch"
+# **.fairFactor = 0.5    # the fairness factor for the scheduler, i.e., 0.5
 **.offloadOverhead = 0.001s
 # **.scheduler.srvTimeScale_ = 1.0
 # **.scheduler.cuStep = 2
@@ -116,8 +103,6 @@ sim-time-limit = 100s
 
 # Application Setup 
 *.ue[*].numApps = 1 # 1, 2
-# *.ue[*].app[*].schedulerAddr = "schedulerHost" # obtain the address of the client by reading its index in the array of Apps 
-# *.ue[*].app[*].schedulerPort = 1000  
 *.ue[*].app[*].localPort = 4000 + ancestorIndex(1) * 10 + index	# assume each ue contains no more than 10 apps
 *.ue[*].udp.mtu = 409600B	# 400KB, the max transimit unit size, for accelerating simulation
 *.ue[*].app[*].dlScale = 1    # the scale for the deadline of the app, default is 1.0. dl = dl / dlScale
@@ -131,15 +116,14 @@ sim-time-limit = 100s
 *.gnb[*].server.cmpUnitTotal = 20
 *.gnb[*].udp.mtu = 409600B	# 400KB, for accelerating simulation 
 **.pilotMode = "MEDIAN_CQI"	# "MAX_CQI", "MIN_CQI", "MEDIAN_CQI", "ROBUST_CQI"
-
 *.gnb[*].ospf.helloInterval = 1s
 
 ############### Fault Configuration #################
 # *.database.linkErrorInjection = true
 # *.database.linkErrorProb = 0.1
-*.database.serverErrorInjection = true
-*.database.serverErrorProb = 0.1
-*.database.failureRecoveryInterval = 30s
+# *.database.serverErrorInjection = true
+# *.database.serverErrorProb = 0.1
+# *.database.failureRecoveryInterval = 30s
 
 # Statistics 
 #output-scalar-file = ${resultdir}/${configname}/${scheme}-appCount-1-interval-10-rsAll-true-ratio-1.sca
@@ -147,28 +131,29 @@ sim-time-limit = 100s
 
 
 # --------------------------------------------------------#   
-[Config Full-Test-MEC-1]    # MEC without backhaul network, 60 combinations
+[Config Normal]    # Experiment without network failure
 extends = Uploading
 
-**.enableBackhaul = false	# whether to enable the backhaul, default is false
 sim-time-limit = 900s
-*.numUe = ${ueCount=80} 	# 80
-*.numGnb = ${gnbCount=15} 	# 15
-**.srsDistanceCheck = true  # enable the distance checking for SRS transmission
-**.fairFactor = 1    # the fairness factor for the scheduler
-*.ue[*].app[*].dlScale = 1.5    # the scale for the deadline of the app, default is 1.0. dl = dl / dlScale
-**.serverExeScale = 3.0   # the scale for the server execution time for database, default is 1.0
+**.rescheduleAll = true
+*.numUe = 80 	# 80
+**.srsDistanceCheck = true  # disable the checking the distance for SRS transmission, for testing purpose
+**.countExeTime = true
 
-*.ue[*].numApps = ${appCount=3}
-**.scheduleScheme = "${scheme=Greedy, FastLR, GameTheory, Iterative, SARound}"	# Greedy, FastLR, GameTheory, Iterative, SARound
-**.scheduleInterval = ${interval=10}s	# ${interval=5, 10, 15, 20}s
-**.pilotMode = "${pilot=MAX_CQI, MEDIAN_CQI, MIN_CQI}"
-**.rescheduleAll = ${rsAll=true, false}	# true, false
-**.countExeTime = ${countTime=true, false}	# whether to count the execution time of schedule scheme, default is true
+# **.fairFactor = 1    # the fairness factor for the scheduler
+# *.ue[*].app[*].dlScale = 1    # the scale for the deadline of the app, default is 1.0. dl = dl / dlScale
+# **.serverExeScale = 3.0   # the scale for the server execution time for database, default is 1.0
+
+*.ue[*].numApps = ${appCount=3, 4}
+**.scheduleScheme = "${scheme=Greedy, FastSA, GameTheory, GraphMatch}"	# "Greedy", "FastSA", "GameTheory", "GraphMatch"
+**.scheduleInterval = ${interval=5, 10, 15}s	# ${interval=5, 10, 15, 20}s
+**.pilotMode = "MAX_CQI"   # "${pilot=MAX_CQI, MEDIAN_CQI, MIN_CQI}"
+# **.rescheduleAll = ${rsAll=true, false}	# true, false
+# **.countExeTime = ${countTime=true, false}	# whether to count the execution time of schedule scheme, default is true
 
 # Statistics 
-output-scalar-file = ${resultdir}/${configname}/scheAll-${rsAll}-countExeTime-${countTime}-${scheme}-pilot-${pilot}.sca
-output-vector-file = ${resultdir}/${configname}/scheAll-${rsAll}-countExeTime-${countTime}-${scheme}-pilot-${pilot}.vec
+output-scalar-file = ${resultdir}/${configname}/${scheme}-interval-${interval}-appCount-${appCount}.sca
+output-vector-file = ${resultdir}/${configname}/${scheme}-interval-${interval}-appCount-${appCount}.vec
 
 
 # --------------------------------------------------------#   
