--- a/simulations/decentralized/omnetpp.ini
+++ b/simulations/decentralized/omnetpp.ini
@@ -154,6 +154,7 @@ sim-time-limit = 900s
 # Statistics 
 output-scalar-file = ${resultdir}/${configname}/${scheme}-interval-${interval}-appCount-${appCount}.sca
 output-vector-file = ${resultdir}/${configname}/${scheme}-interval-${interval}-appCount-${appCount}.vec
+# example: Greedy-interval-10-appCount-3.sca, Greedy-interval-10-appCount-3.vec
 
 
 # --------------------------------------------------------#   
